--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -1,5 +1,5 @@
 <!-- 引入导航模块的宏 render_nav_item -->
-{% from 'bootstrap/nav.html' import render_nav_item %}
+{% from 'bootstrap/nav.html' import render_nav_item, render_breadcrumb_item %}
 <!-- 下面是正常的 Bootstrap 页面代码，看起来很复杂，不过可以从官网上拷贝 -->
 <!DOCTYPE html>
 <html lang="cn">
@@ -24,10 +24,18 @@
             <ul class="navbar-nav mr-auto">
                 <!-- 利用宏 render_nav_item 创建菜单 -->
                 {{ render_nav_item('index', '首页', use_li=True) }}
-                {{ render_nav_item('index', '扉页', use_li=True) }}
-                {{ render_nav_item('index', '尾页', use_li=True) }}
+                {{ render_nav_item('index2', '扉页', use_li=True) }}
+                {{ render_nav_item('index3', '尾页', use_li=True) }}
             </ul>
         </div>
+
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                {{ render_breadcrumb_item('index', 'Home') }}
+                {{ render_breadcrumb_item('index2', 'Users') }}
+                {{ render_breadcrumb_item('index3', 'Posts') }}
+            </ol>
+        </nav>
     </nav>
     {% block content %}  <!-- 定义内容块 -->
     <h1> Hello Flask Bootstrap! </h1>
