--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} <!-- 继承基础模板 -->
 
-{% block content %} <!-- 替换页面内容 -->
+{% block footer %} <!-- 替换页面内容 -->
 <h1> Hello Flask Bootstrap1 </h1>
 {% endblock %}
